se estructura HTML

--- a/index.html
+++ b/index.html
@@ -7,5 +7,31 @@
     <link rel="stylesheet" href="style.css" />
     <title>CardFigma</title>
   </head>
-  <body></body>
+  <body>
+    <main class="container">
+      <div class="cardfigma">
+        <button class="cardfigma__x">X</button>
+        <p class="cardfigma__text">
+          ¡Como te sentiste con el soporte de Federico?
+        </p>
+        <button class="cardfigma__button">1</button>
+        <button class="cardfigma__button">2</button>
+        <button class="cardfigma__button">3</button>
+        <button class="cardfigma__button">4</button>
+        <button class="cardfigma__button button5">5</button>
+        <div class="buttontext">
+          <p class="satisfaccion1">Bastante <span> Insatisfecho</span></p>
+          <p class="satisfaccion2">Extremadamente <span>satisfecho</span></p>
+        </div>
+        <label for="cardfigma__tyc" class="cardfigma__tyc"
+          ><input
+            type="checkbox"
+            id="cardfigma__tyc"
+            class="cardfigmaa_input"
+          />Acepto los terminos y uso</label
+        >
+        <button class="cardfigma__buttonend">SIGUIENTE --></button>
+      </div>
+    </main>
+  </body>
 </html>
