--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
   <body>
     <main class="container">
       <div class="cardfigma">
-        <button class="cardfigma__x">X</button>
+        <button class="cardfigma__x">x</button>
         <p class="cardfigma__text">
-          ¡Como te sentiste con el soporte de Federico?
+          ¿Como te sentiste con el soporte de Federico?
         </p>
-        <button class="cardfigma__button">1</button>
-        <button class="cardfigma__button">2</button>
-        <button class="cardfigma__button">3</button>
-        <button class="cardfigma__button">4</button>
-        <button class="cardfigma__button button5">5</button>
+        <div class="cardfigma__divbutton">
+          <button class="cardfigma__button">1</button>
+          <button class="cardfigma__button">2</button>
+          <button class="cardfigma__button">3</button>
+          <button class="cardfigma__button">4</button>
+          <button class="cardfigma__button button5">5</button>
+        </div>
         <div class="buttontext">
           <p class="satisfaccion1">Bastante <span> Insatisfecho</span></p>
           <p class="satisfaccion2">Extremadamente <span>satisfecho</span></p>
