--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main class="container">
       <div class="cardfigma">
-        <button class="cardfigma__x">x</button>
+        <button class="cardfigma__x">X</button>
         <p class="cardfigma__text">
           ¿Como te sentiste con el soporte de Federico?
         </p>
@@ -19,7 +19,7 @@
           <button class="cardfigma__button">2</button>
           <button class="cardfigma__button">3</button>
           <button class="cardfigma__button">4</button>
-          <button class="cardfigma__button button5">5</button>
+          <button class="cardfigma__button">5</button>
         </div>
         <div class="buttontext">
           <p class="satisfaccion1">Bastante <span> Insatisfecho</span></p>
