box-shadow button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           ><input
             type="checkbox"
             id="cardfigma__tyc"
-            class="cardfigmaa_input"
+            class="cardfigma_input"
           />Acepto los terminos y uso</label
         >
         <button class="cardfigma__buttonend">SIGUIENTE --></button>
