se termina card

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             type="checkbox"
             id="cardfigma__tyc"
             class="cardfigma_input"
+            name="cardfigma__tyc"
           />Acepto los terminos y uso</label
         >
         <button class="cardfigma__buttonend">SIGUIENTE --></button>
